unpackaged/main/default/objects/Domain_Handler__mdt/Domain_Handler__mdt.object-meta.xml
<CustomObject>
    <label>Domain Handler</label>
    <pluralLabel>Domain Handlers</pluralLabel>
</CustomObject>