unpackaged/main/default/objects/Domain_Handler__mdt/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <label>SObject Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>BCAccount__c</fullName>
            </value>
            <value>
                <fullName>Block_Pricing__c</fullName>
            </value>
            <value>
                <fullName>Brightcove_Account__c</fullName>
            </value>
            <value>
                <fullName>CampaignMember</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>CaseComment</fullName>
            </value>
            <value>
                <fullName>Community_Member__c</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Custom_Pricing__c</fullName>
            </value>
            <value>
                <fullName>Entitlement</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Live_Event_Coverage__c</fullName>
            </value>
            <value>
                <fullName>Log__c</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>OpportunityContactRole</fullName>
            </value>
            <value>
                <fullName>OpportunityLineItem</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Pricebook2</fullName>
            </value>
            <value>
                <fullName>Product2</fullName>
            </value>
            <value>
                <fullName>sbaa__ApprovalChain__c</fullName>
            </value>
            <value>
                <fullName>sbaa__ApprovalRule__c</fullName>
            </value>
            <value>
                <fullName>sbaa__ApprovalVariable__c</fullName>
            </value>
            <value>
                <fullName>sbaa__Approver__c</fullName>
            </value>
            <value>
                <fullName>sbaa__EmailTemplate__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__BlockPrice__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__ConfigurationRule__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__Dimension__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>