unpackaged/main/default/objects/Domain_Handler__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Status__c</columns>
    <columns>Handler_Class__c</columns>
    <columns>SObject_Name__c</columns>
    <columns>Trigger_Event__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>